add jvm optimize